Little tweaks and cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
         <item>is made of diamonds,</item>
         <item>makes birds sing,</item>
         <item>should be taught in school,</item>
-        <item>makes my word go round,</item>
+        <item>makes my world go round,</item>
         <item>is 100% legit,</item>
     </string-array>
     <string-array name="salutations_array">
