Gave up on the resources string arrays for now, moving to defined sets like the Unscramble course app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">Pep Talk Generator</string>
     <string name="generate_new">Generate New Pep Talk</string>
     <string name="share_button">Pep Someone Up (Sharing)</string>
+    <string name="greeting_Champ">Champ,</string>
+    <string name="greeting_Fact">Fact:</string>
     //reference this URL for more info on the string array, may want to format these later
     //https://developer.android.com/guide/topics/resources/string-resource.html#FormattingAndStyling
     <string-array name="greetings_array">
