--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,13 @@
 <resources>
     <string name="app_name">Pep Talk Generator</string>
     <string name="generate_new">New Pep Talk</string>
+    <string name="button_saveCustomPhrase">Save Custom Phrase</string>
+    <string name="field_CustomIntro">Custom Intro</string>
+    <string name="field_CustomFirst">Custom First Part</string>
+    <string name="field_CustomSecond">Custom Second Part</string>
+    <string name="field_CustomEnding">Custom Ending</string>
+    <string name="loading">Loading</string>
+    <string name="loading_failed">Failed to load</string>
     <string name="button_favorite">Favorite</string>
     <string name="button_block">Block</string>
     <string name="button_share">Sharing</string>
