--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,23 @@
 <resources>
     <string name="app_name">Pep Talk Generator</string>
     <string name="generate_new">New Pep Talk</string>
+    <string name="favorites_screen">Favorites</string>
     <string name="button_saveCustomPhrase">Save Custom Phrase</string>
     <string name="field_CustomIntro">Custom Intro</string>
     <string name="field_CustomFirst">Custom First Part</string>
     <string name="field_CustomSecond">Custom Second Part</string>
     <string name="field_CustomEnding">Custom Ending</string>
+    <string name="favorites_explainer">Click on each Favorite Pep Talk to see more options.</string>
+    <string name="noFavorites">No Favorites saved.</string>
     <string name="loading">Loading</string>
     <string name="loading_failed">Failed to load</string>
     <string name="button_favorite">Favorite</string>
     <string name="button_block">Block</string>
     <string name="button_share">Sharing</string>
-    <string name="greeting_Champ">Champ,</string>
-    <string name="greeting_Fact">Fact:</string>
+    <string name="pepTalkDetails_screen">Pep Talk Details</string>
+    <string name="delete">Delete</string>
+    <string name="delete_question">Are you sure you want to delete?</string>
+    <string name="attention">Attention</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
 </resources>
