--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
     <string name="unFavorite">Remove From Favorites</string>
     <string name="unFavorite_question">Are you sure you want to remove from Favorites?</string>
     <string name="attention">Attention</string>
+    <string name="channel_new_pep_talk">New Pep Talk</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="screen_settings">Settings</string>
+    <string name="screen_details">Details</string>
+    <string name="settings_reminder_title">Daily Pep Talk</string>
+    <string name="settings_reminder_desc">Get a daily Pep Talk every morning</string>
 </resources>
